# cutelyst

./: .clang-format  .gitmodules  .pre-commit-config.yaml  .travis.yml  AUTHORS  CMakeLists.txt  CMakePresets.json  COPYING  Doxyfile  MAINTAINERS  Messages.sh  README.md  RELEASE  TODO  appveyor.yml  config.h.in  release.sh
Cutelyst/: Action  ActionChain  AppSettings  Application  CMakeLists.txt  CQueryMultiMap  Code  Component  ComponentFactory  Cookie  CoroContext.h  CutelystQt5Core.pc.in  CutelystQtCore.pc.in  DispatchType  Dispatcher  Engine  Headers  ParamsMultiMap  Request  Response  TestEngine  Upload  View  action.cpp  action.h  action_p.h  actionchain.cpp  actionchain.h  actionchain_p.h  application.cpp  application.h  application_p.h  appsettings.cpp  appsettings.h  async.cpp  async.h  childprocess.cpp  childprocess_p.h  code.cpp  code.h  (+83 more)
Cutelyst/Actions/: CMakeLists.txt  actionrest.cpp  actionrest.h  actionrest_p.h  renderview.cpp  renderview.h  renderview_p.h  roleacl.cpp  roleacl.h  roleacl_p.h
Cutelyst/Plugin/: authentication.cpp  authentication.h  authentication_p.h  plugin.cpp  plugin.h  session.cpp  session.h  staticsimple.cpp  staticsimple.h
Cutelyst/Plugins/: CMakeLists.txt  authentication.cpp  authentication.h  authentication_p.h  authenticationrealm.cpp  authenticationrealm.h  authenticationstore.cpp  authenticationstore.h  authenticationuser.cpp  authenticationuser.h  session.cpp  session.h  session_p.h  sessionstorefile.cpp  sessionstorefile.h  staticsimple.cpp  staticsimple.h  staticsimple_p.h  viewengine.cpp  viewengine.h  viewjson.cpp  viewjson.h  viewjson_p.h
Cutelyst/Server/: CMakeLists.txt  abstractfork.cpp  abstractfork.h  hpack.cpp  hpack.h  hpack_p.cpp  hpack_p.h  localserver.cpp  localserver.h  main.cpp  postunbuffered.cpp  postunbuffered.h  protocol.cpp  protocol.h  protocolfastcgi.cpp  protocolfastcgi.h  protocolhttp.cpp  protocolhttp.h  protocolhttp2.cpp  protocolhttp2.h  protocolwebsocket.cpp  protocolwebsocket.h  server.cpp  server.h  server_p.h  serverengine.cpp  serverengine.h  socket.cpp  staticmap.cpp  staticmap.h  systemdnotify.cpp  systemdnotify.h  tcpserver.cpp  tcpserver.h  (+7 more)
EventLoopEPoll/: CMakeLists.txt  eventdispatcher_epoll.cpp  eventdispatcher_epoll.h  eventdispatcher_epoll_p.cpp  eventdispatcher_epoll_p.h  socknot_p.cpp  timers_p.cpp
cmd/: CMakeLists.txt  helper.cpp  helper.h  main.cpp  main.qrc  skel_controller_cpp.txt  uwsgiprocess.cpp  uwsgiprocess.h
developerEngine/: CMakeLists.txt  childprocess.cpp  childprocess.h  childprocess_p.h  enginehttp.cpp  enginehttp.h  enginehttp_p.h
dox/: CMakeLists.txt  Mainpage.dox  cutelyst-wsgi.1.in  cutelyst.1.in  cutelystd.1.in  group-plugins-authentication.dox  group-plugins-utils-sql.dox  group-plugins-utils.dox  group-plugins.dox
i18n/: CMakeLists.txt  cutelystcmd.de.ts  cutelystcmd.ts  cutelystcore.de.ts  cutelystwsgi.de.ts  cutelystwsgi.en.ts  cutelystwsgi.ts  plugin_memcached.de.ts  plugin_memcached.ts  plugin_utils_validator.de.ts  plugin_utils_validator.en.ts  plugin_view_grantlee.en.ts
lib/: CMakeLists.txt  Context  CutelystApplication  CutelystController  Doxyfile  childprocess.cpp  childprocess.h  common.h  context.cpp  context.h  context_p.h  cpstaticsimple.cpp  cutelyst-qt5.pc.in  cutelyst.cpp  cutelyst.h  cutelyst_p.h  cutelystaction.cpp  cutelystaction.h  cutelystaction_p.h  cutelystapplication.cpp  cutelystapplication.h  cutelystapplication_p.h  cutelystchildprocess.cpp  cutelystchildprocess.h  cutelystchildprocess_p.h  cutelystconnection.cpp  cutelystconnection.h  cutelystconnection_p.h  cutelystconnectionhttp.cpp  cutelystconnectionhttp.h  cutelystcontext.cpp  cutelystcontext.h  cutelystcontext_p.h  cutelystcontroller.cpp  cutelystcontroller.h  cutelystdispatcher.cpp  cutelystdispatcher.h  cutelystdispatcher_p.h  cutelystdispatchtype.cpp  cutelystdispatchtype.h  (+28 more)
server/: CMakeLists.txt  CutelystQtServer.pc.in  abstractfork.cpp  abstractfork.h  cwsgiengine.cpp  cwsgiengine.h  hpack.cpp  hpack.h  hpack_p.cpp  hpack_p.h  localserver.cpp  localserver.h  main.cpp  postunbuffered.cpp  protocol.cpp  protocol.h  protocolfastcgi.cpp  protocolfastcgi.h  protocolhttp.cpp  protocolhttp.h  protocolhttp2.cpp  protocolhttp2.h  protocolwebsocket.cpp  protocolwebsocket.h  root.cpp  root.h  server.cpp  server.h  server_p.h  serverengine.cpp  serverengine.h  socket.cpp  socket.h  staticmap.cpp  staticmap.h  systemdnotify.cpp  systemdnotify.h  tcpserver.cpp  tcpserver.h  tcpserverbalancer.cpp  (+9 more)
tests/: CMakeLists.txt  coverageobject.cpp  coverageobject.h  cutelyst_paths.h.cmake  testactionrenderview.cpp  testactionrest.cpp  testactionroleacl.cpp  testauthentication.cpp  testcontext.cpp  testcontroller.cpp  testcookie.cpp  testcsrfprotection.cpp  testdispatcher.cpp  testdispatcherchained.cpp  testdispatcherpath.cpp  testheaders.cpp  testlangselect.cpp  testlangselectmanual.cpp  testmemcached.cpp  testpagination.cpp  testpbkdf2.cpp  testrequest.cpp  testresponse.cpp  testserver.cpp  teststaticcompressed.cpp  teststaticsimple.cpp  teststatusmessage.cpp  testutils.cpp  testvalidator.cpp  testviewjson.cpp  tst_dispatcher.cpp
uwsgiEngine/: CMakeLists.txt  bodybuffereduwsgi.cpp  bodybuffereduwsgi.h  bodyuwsgi.cpp  bodyuwsgi.h  coreuwsgi.cpp  coreuwsgi.h  engineuwsgi.cpp  engineuwsgi.h  mainthreaduwsgi.cpp  mainthreaduwsgi.h  plugin.c  plugin.cpp  plugin.h  requesthandler.cpp  requesthandler.h  uwsgiconnection.cpp  uwsgiconnection.h
wsgi/: CMakeLists.txt  CutelystQt5WSGI.pc.in  abstractfork.cpp  abstractfork.h  cuteengine.cpp  cuteengine.h  cwsgiengine.cpp  cwsgiengine.h  hpack.cpp  hpack.h  hpack_p.cpp  hpack_p.h  hpacktables.cpp  hpacktables.h  localserver.cpp  localserver.h  main.cpp  postunbuffered.cpp  postunbuffered.h  protocol.cpp  protocol.h  protocolfastcgi.cpp  protocolfastcgi.h  protocolhttp.cpp  protocolhttp.h  protocolhttp2.cpp  protocolhttp2.h  protocolwebsocket.cpp  protocolwebsocket.h  socket.cpp  socket.h  staticmap.cpp  staticmap.h  systemdnotify.cpp  systemdnotify.h  tcpserver.cpp  tcpserver.h  tcpserverbalancer.cpp  tcpserverbalancer.h  tcpsslserver.cpp  (+8 more)
(+486 files in other folders)
